# zgoubidoo

./: .gitignore  .gitmodules  .python-version  .travis.yml  AUTHORS  CHANGELOG  Dockerfile  README.md  beam.html  commands.html  contrib.html  environment.yml  examples.html  fieldmaps.html  genindex.html  gettingstarted.html  index.html  input.html  installation.html  lowlevel.html  mypy.ini  news.html  objects.inv  physics.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  sequence.html  setup.py  sonar-project.properties  tmp.py  utilities.html  vis.html  zgoubi.html
_images/: inheritance-0661161928d23724256b257c25b6d1a2ee620088.png.map  inheritance-0bff745e99c7880292924c2a6b926d3c2f0737d8.png.map  inheritance-11d3bef630c7c97a7877fa80724c60e3adcd1876.png.map  inheritance-16a678dceed784a2d0b88a35fbacfdbe2b013f18.png.map  inheritance-1803633252daf60aaad8655fabb7751dfc9c3ebb.png.map  inheritance-34a9edbc385911dcfb08bc9867fba242914d2056.png.map  inheritance-3f9663799c118f4ee7e390015f73c41017683eda.png.map  inheritance-44fe0975f465a623cf3ef413b436192bac3ecd63.png.map  inheritance-45e3fcda561db6c056404c6dd5db227aa4ca712b.png.map  inheritance-4ea01585d336e32ac9c620ef0815f712749c9016.png.map  inheritance-50a7a142f7cb87a17460c24d89b68341f375144b.png.map  inheritance-59360ff7b7799d78803dcd7620c71dfa247b9c05.png.map  inheritance-60cc6f2489cfa39df287fd1e6e9bcc2b7b19e855.png.map  inheritance-63948b8d80de9b40fa90419d6d899e8d38fe187f.png.map  inheritance-6620b53ea11404da4fe058e95906c1be5d3a74b6.png.map  inheritance-69b95fe16a6435af925bc046baa0c2722296f09a.png.map  inheritance-6fd4e1557217990999ae2b68d9e6485c21eec3b0.png.map  inheritance-70fa72f0a697ee2811e12f9d3c1f6f0c9d469481.png.map  inheritance-76e149c99e4e723cae338644b64e82c9621605f5.png.map  inheritance-7826d4c975dfac5e66d3856e6d95b99b27c35325.png.map  inheritance-7a877e6b38c0fc54c53aa29cd40f5f4408ab47a8.png.map  inheritance-7c16ff59b9245e1c0cfdabe9a87e033a47422f81.png.map  inheritance-7c325d3593bdff47adb6dad0d55d1d8fc2e20c96.png.map  inheritance-82193c5f9013470b7c8a03369268bc58159e311e.png.map  inheritance-829b7b2e58366e07d0d348a772c15d40e958c461.png.map  inheritance-850f8c2e83441289b9b33c0c0088e1a373fd3213.png.map  inheritance-875f9ac0327572e5a50e6276f43e8b8a6a21eedd.png.map  inheritance-895d94013663145de8f52a1d92257be845e977d1.png.map  inheritance-8c2b2160edc34dbbad0bda42eaf8292be611780a.png.map  inheritance-94be2d1462e7d2dbf8a769186e9ebb25c3db19b6.png.map  inheritance-9b068c5f10550c2f9cdecb1bf4b45974584c6810.png.map  inheritance-9d38c0d1b87d03dfbaef12d2f7f967c5b124a14c.png.map  (+25 more)
_modules/: index.html  (+1 more)
(+1086 files in other folders)
